# bgai

./: .gitignore  AGENTS.md  CLAUDE.md  PLAN.md  README.md  backgammon_env.py  backgammon_env_test.py  benchmark.py  bg_training_run.ipynb  mac-compatible-training.py  pyproject.toml  requirements-dev.txt  requirements.txt  rtx4090train.py  venv_setup.sh
benchmarks/: AGENTS.md  bench_batched_cpu.py  bench_game_env.py  bench_hybrid_batch.py  bench_hybrid_batched_games.py  bench_hybrid_mcts.py  bench_hybrid_simple.py  bench_mcts.py  bench_model_comparison.py  bench_simple_two_player.py  bench_stochastic_mcts.py  bench_training_loop.py  bench_two_player.py  bench_vmap_games.py  benchmark_common.py  hybrid_cpu_gpu_benchmark.py
bgai/: CLAUDE.md  bgcommon.py  bgevaluators.py  gnubg_evaluator.py
bgwrapper/: bgmcts.go  bgselfplay.go  bgwrapper.go  bgwrapper_test.go  go.mod  nerualbridge.go
configs/: distributed.yaml
distributed/: AGENTS.md  CLAUDE.md  TRAINING.md  __init__.py  config.py  device.py  metrics.py  serialization.py  utils.py
docs/: OPTIMIZATION_TODO.md  endgame_tables_design.md  turbozero_4way_value_head.md  turbozero_value_head_update.md
notebooks/: bg_training_run.ipynb  colab_game_worker.ipynb
rust/bearoff/: Cargo.toml  README.md
rust/bearoff/src/: lib.rs
scripts/: bearoff_cli.py  benchmark_eval_gpu_vs_cpu.py  generate_streaming_15.py  generate_tiered_14.py  grafana_restart.sh  grafana_setup.sh  head_start.sh  prometheus_setup.sh  pushgateway_setup.sh  reset_and_start.sh  setup_grafana.sh  start_all_head.sh  start_eval_worker.sh  start_worker.sh  (+8 more)
(+87 files in other folders)
