[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "bgai"
version = "0.1.0"
description = "Backgammon AI with Alpha Zero training"
requires-python = ">=3.10"
dependencies = []

[tool.setuptools.packages.find]
include = ["bgai*", "distributed*", "benchmarks*"]
